<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ebook_navigation"
    app:startDestination="@id/bookshelfFragment">

    <fragment
        android:id="@+id/bookshelfFragment"
        android:name="com.example.ebook01.ui.BookshelfFragment"
        android:label="@string/bookshelf"
        tools:layout="@layout/fragment_bookshelf_list" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.ebook01.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/personFragment"
        android:name="com.example.ebook01.ui.PersonFragment"
        android:label="@string/person"
        tools:layout="@layout/fragment_person" />
</navigation>